<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_drawer_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_vacations"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/drawer_vacations" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/drawer_activities" />
    </group>

    <group
        android:id="@+id/menu_drawer_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/drawer_info" />
        <!--<item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/drawer_settings" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/drawer_logout" />
    </group>

</menu>